@@ -1,5 +1,11 @@
 2010-01-21  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* include/grub/i386/bsd.h (FREEBSD_N_BIOS_GEOM): Removed.
+	(grub_freebsd_bootinfo): Rewritten.
+	* loader/i386/bsd.c (grub_freebsd_boot): Use new grub_freebsd_bootinfo.
+
+2010-01-21  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	* util/misc.c (make_system_path_relative_to_its_root): Fix typo.
 
 2010-01-21  Robert Millan  <rmh.grub@aybabtu.com>
